--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8" />
     <meta name="description" content="Виконання першого ДЗ" />
     <title>Домашнє завдання #2</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -24,7 +26,8 @@
             <div>
                 <ul class="site-nav list">
                     <li><a href="#" class="link link-nav">Студия</a></li>
-                    <li><a href="https://izaitseva.github.io/goit-markup-hw-02/portfolio.html" class="link link-nav">Портфолио</a></li>
+                    <li><a href="https://izaitseva.github.io/goit-markup-hw-02/portfolio.html"
+                            class="link link-nav">Портфолио</a></li>
                     <li><a href="#" class="link link-nav">Контакты</a></li>
                 </ul>
             </div>
