--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list img-margin">
-                    <li>
+                    <li class="img-item">
                         <img src="./images/box1.jpg" alt="box1" width="370" height="294">
                     </li>
-                    <li>
+                    <li class="img-item">
                         <img src="./images/box2.jpg" alt="box2" width="370" height="294">
                     </li>
-                    <li>
+                    <li class="img-item">
                         <img src="./images/box3.jpg" alt="box3" width="370" height="294">
                     </li>
                 </ul>
@@ -101,23 +101,23 @@
         <section class="section section-team">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
-                <ul class="list team-job">
-                    <li class="item">
+                <ul class="list team-job flex-item">
+                    <li class="team-decor">
                         <img src="./images/Ihor.jpg" alt="фото" width="270">
                         <h3>Игорь Демьяненко</h3>
                         <p>Product Designer</p>
                     </li>
-                    <li class="item">
+                    <li class="team-decor">
                         <img src="./images/Olga.jpg" alt="фото" width="270">
                         <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </li>
-                    <li class="item">
+                    <li class="team-decor">
                         <img src="./images/Nick.jpg" alt="фото" width="270">
                         <h3>Николай Тарасов</h3>
                         <p>Marketing</p>
                     </li>
-                    <li class="item">
+                    <li class="team-decor">
                         <img src="./images/Michael.jpg" alt="фото" width="270">
                         <h3>Михаил Ермаков</h3>
                         <p>UI Designer</p>
