--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <!--Верхня частина-->
-    <header>
+    <header class="header">
         <div>
             <nav class="container main-nav">
                 <div>
@@ -32,18 +32,18 @@
                         <li><a href="#" class="link link-nav">Контакты</a></li>
                     </ul>
                 </div>
-            <!--Контакти-->
-            <div class="div-contacts">
-                <ul class="site-nav list header-contacts">
-                    <li>
-                        <a href="info@devstudio.com" class="link contacts-header">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:" class="link contacts-header">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+                <!--Контакти-->
+                <div class="div-contacts">
+                    <ul class="site-nav list header-contacts">
+                        <li>
+                            <a href="info@devstudio.com" class="link contacts-header">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:" class="link contacts-header">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
     <!--Основна частина-->
@@ -104,23 +104,31 @@
                 <ul class="list team-job flex-item">
                     <li class="team-decor">
                         <img src="./images/Ihor.jpg" alt="фото" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p>Product Designer</p>
+                        <div class="team-names">
+                            <h3>Игорь Демьяненко</h3>
+                            <p>Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-decor">
                         <img src="./images/Olga.jpg" alt="фото" width="270">
-                        <h3>Ольга Репина</h3>
-                        <p>Frontend Developer</p>
+                        <div class="team-names">
+                            <h3>Ольга Репина</h3>
+                            <p>Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-decor">
                         <img src="./images/Nick.jpg" alt="фото" width="270">
-                        <h3>Николай Тарасов</h3>
-                        <p>Marketing</p>
+                        <div class="team-names">
+                            <h3>Николай Тарасов</h3>
+                            <p>Marketing</p>
+                        </div>
                     </li>
                     <li class="team-decor">
                         <img src="./images/Michael.jpg" alt="фото" width="270">
-                        <h3>Михаил Ермаков</h3>
-                        <p>UI Designer</p>
+                        <div class="team-names">
+                            <h3>Михаил Ермаков</h3>
+                            <p>UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
