--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </section>
         <!--Перелік послуг-->
-        <section class="section-services">
+        <section class="section- section-mrg">
             <div class="container">
                 <ul class="list list-services">
                     <li class="item">
@@ -80,7 +80,7 @@
         </section>
 
         <!--Перелік послуг-фото-->
-        <section class="section-photos">
+        <section class="section-photos section-mrg">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list img-margin">
@@ -98,7 +98,7 @@
         </section>
 
         <!--Команда-->
-        <section class="section section-team">
+        <section class="section section-team section-mrg">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="list team-job flex-item">
