--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
 <body>
     <!--Верхня частина-->
-    <header class="header-border">
+    <header class="header-border portfolio-header">
         <div class="nav-decor">
             <nav class="container main-nav">
                 <div>
@@ -50,9 +50,9 @@
 
     <!--Основна частина-->
     <main>
-        <section class="container section-portfolio">
+        <section class="section-portfolio">
             <!-- Navigation btns -->
-            <div>
+            <div class="container">
                 <ul class="list btn-list list-item">
                     <li>
                         <button type="button">Все</button>
@@ -72,7 +72,7 @@
                 </ul>
             </div>
             <!-- Portfolio -->
-            <div>
+            <div class="container">
                 <ul class="list portfolio-list list-item">
                     <li class="portfolio-decor">
                         <img class="img-item" src="./images/images portfolio/img(9).jpg" alt="Ноутбук" width="370"
