--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <ul class="site-nav list header-menu">
-                        <li><a href="#" class="link link-nav">Студия</a></li>
+                        <li><a href="https://izaitseva.github.io/goit-markup-hw-03/" class="link link-nav">Студия</a></li>
                         <li><a href="https://izaitseva.github.io/goit-markup-hw-03/portfolio.html"
                                 class="link link-nav">Портфолио</a></li>
                         <li><a href="#" class="link link-nav">Контакты</a></li>
