--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
 
         <!--Перелік послуг-фото-->
-        <section class="section-photos section-mrg">
+        <section class="section-photos">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list img-margin">
